# KPPL-CI-Example

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
tests/: test_main.py
